--- a/QuanLyTour/Views/Admin/ThemTourView.cshtml
+++ b/QuanLyTour/Views/Admin/ThemTourView.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<LoaiTour>
+﻿@using QuanLyTour.Models.Tour
+@model List<LoaiTour>
 @{
     ViewData["Title"] = "ThemTourView";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
