--- a/QuanLyTour/Views/Admin/QuanLyPhieuView.cshtml
+++ b/QuanLyTour/Views/Admin/QuanLyPhieuView.cshtml
@@ -1,4 +1,5 @@
-﻿@model IPagedList<QuanLyTour.Models.PhieuDatTour>
+﻿@model IPagedList<PhieuDatTour>
+@using QuanLyTour.Models.Tour
 @using X.PagedList
 @using X.PagedList.Mvc.Core;
 @{
