--- a/QuanLyTour/Views/Admin/QuanLyTourView.cshtml
+++ b/QuanLyTour/Views/Admin/QuanLyTourView.cshtml
@@ -1,4 +1,5 @@
-﻿@model IPagedList<QuanLyTour.Models.TourViewModel>
+﻿@model IPagedList<TourViewModel>
+@using QuanLyTour.Models.Tour
 @using X.PagedList
 @using X.PagedList.Mvc.Core;
 @{
