--- a/QuanLyTour/Views/Home/Index.cshtml
+++ b/QuanLyTour/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model TourIndexViewModel
+﻿@using QuanLyTour.Models.Tour
+@model TourIndexViewModel
 @{
     ViewData["Title"] = "Home Page";
 }
@@ -82,18 +83,24 @@
                                         <h4>
                                             <a href="@Url.Action("ChiTietTour","Tour",new {maTour = tour.MaTour, maLoai = tour.MaLoaiTour})">@tour.TenTour</a>
                                         </h4>
-                                        <div class="tour-duration">
+                                        <div class="tour-duration-container">
+                                            <div class="tour-duration">
                                                 <span><i class="fa fa-clock-o" aria-hidden="true"></i></span>
                                                 <div>@($"{tour.SoNgay}")</div>
+                                            </div>
+                                            <div class="transportation-icons">
+                                                <i class="fa fa-plane" aria-hidden="true"></i>
+                                                <i class="fa fa-bus" aria-hidden="true"></i>
+                                                <i class="fa fa-train" aria-hidden="true"></i>
+                                            </div>
                                         </div>
                                         <div class="tour-highlights">
-                                                <div>@($"Điểm đến: {tour.DiaDiem}")</div>
+                                            <div>@($"Điểm đến: {tour.DiaDiem}")</div>
                                         </div>
                                         <div class="tour-price">
-                                            
                                             <div>@tour.GiaTour.ToString("#,##0") VNĐ</div>
                                         </div>
-                                    </div>
+                                    </div>  
                                 </div>
                             </div>
                         }
