--- a/QuanLyTour/Views/Home/ThongTinTourDat.cshtml
+++ b/QuanLyTour/Views/Home/ThongTinTourDat.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using QuanLyTour.Models.Tour
+@{
     ViewData["Title"] = "Thông tin tour đã đặt";
     Layout = "~/Views/Shared/_Detail.cshtml";
 }
