--- a/QuanLyTour/Views/Home/ThongTinNguoiDung.cshtml
+++ b/QuanLyTour/Views/Home/ThongTinNguoiDung.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Thông tin người dùng";
-    Layout = "~/Views/Shared/_DeTail.cshtml";
+    Layout = "~/Views/Shared/_Detail.cshtml";
 }
 <section class="innerpage-wrapper">
     <div id="login" class="innerpage-section-padding">
