--- a/QuanLyTour/Views/Shared/_Layout.cshtml
+++ b/QuanLyTour/Views/Shared/_Layout.cshtml
@@ -129,13 +129,13 @@
                                 <a href="@Url.Action("Index","Home")">Trang chủ<span></span></a>
                             </li>
                             <li class="dropdown active">
-                                <a href="@Url.Action("KhachSan","KhachSan")">Khách Sạn<span></span></a>
+                                <a href="@Url.Action("Index","KhachSan")">Khách Sạn<span></span></a>
                             </li>
                             <li class="dropdown active">
-                                <a href="@Url.Action("VeMayBay","VeMayBay")">Vé Máy Bay<span></span></a>
+                                <a href="@Url.Action("Index","VeMayBay")">Vé Máy Bay<span></span></a>
                             </li>
                             <li class="dropdown active">
-                                <a href="@Url.Action("VeTau","VeTau")">Vé Tàu<span></span></a>
+                                <a href="@Url.Action("Index","VeTau")">Vé Tàu<span></span></a>
                             </li>
                             <li class="dropdown active">
                                 <a href="@Url.Action("HoTro","Home")">Hỗ Trợ<span></span></a>
