--- a/QuanLyTour/Views/Shared/_LoginUser.cshtml
+++ b/QuanLyTour/Views/Shared/_LoginUser.cshtml
@@ -86,13 +86,13 @@
                         <a href="@Url.Action("Index","Home")">Trang chủ<span></span></a>
                     </li>
                     <li class="dropdown active">
-                        <a href="@Url.Action("KhachSan","Home")">Khách Sạn<span></span></a>
+                        <a href="@Url.Action("Index","KhachSan")">Khách Sạn<span></span></a>
                     </li>
                     <li class="dropdown active">
-                        <a href="@Url.Action("VeMayBay","Home")">Vé Máy Bay<span></span></a>
+                        <a href="@Url.Action("Index","VeMayBay")">Vé Máy Bay<span></span></a>
                     </li>
                     <li class="dropdown active">
-                        <a href="@Url.Action("VeTau","Home")">Vé Tàu<span></span></a>
+                        <a href="@Url.Action("Index","VeTau")">Vé Tàu<span></span></a>
                     </li>
                     <li class="dropdown active">
                         <a href="@Url.Action("HoTro","Home")">Hỗ Trợ<span></span></a>
