--- a/QuanLyTour/Views/Admin/QuanLyTourView.cshtml
+++ b/QuanLyTour/Views/Admin/QuanLyTourView.cshtml
@@ -30,7 +30,7 @@
                 Quản lý thông tin Tour
             </header>
             <div class="panel-body">
-                <a href="@Url.Action("ThemTourView","Admin")"><button type="button" class="btn btn-success" style="margin-left:5px;"><i class="fa fa-plus"></i></button></a>
+                <a href="@Url.Action("ThemTourView","Admin")"><button type="button" class="btn btn-success" style="margin-bottom: 15px"><i class="fa fa-plus"></i></button></a>
                 <br/>
                 @if (TempData["ErrorMessage"] != null)
                 {
