--- a/QuanLyTour/Views/Home/TimKiemTour.cshtml
+++ b/QuanLyTour/Views/Home/TimKiemTour.cshtml
@@ -12,7 +12,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 content-side">
                     <div class="row">
-                        <h3>Kết quả tìm kiếm cho: "<stron>@ViewBag.Keyword</strong>"</h3>
+                        <h3>Kết quả tìm kiếm cho: "<strong>@ViewBag.Keyword</strong>"</h3>
 
                         @if (Model != null && Model.Any())
                         {
