add admin khachsan

--- a/QuanLyTour/Views/Shared/_LayoutAdmin.cshtml
+++ b/QuanLyTour/Views/Shared/_LayoutAdmin.cshtml
@@ -15,10 +15,13 @@
     <meta name="author" content="Mosaddek">
     <meta name="keyword" content="FlatLab, Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina">
     <link rel="shortcut icon" href="img/favicon.html">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
     <title>FlatLab - Flat & Responsive Bootstrap Admin Template</title>
 
     <!-- Bootstrap core CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
     <link href="~/cssadmin/bootstrap.min.css" rel="stylesheet">
     <link href="~/cssadmin/bootstrap-reset.css" rel="stylesheet">
     <!--external css-->
@@ -104,6 +107,12 @@
                             <a href="@Url.Action("QuanLyTourView","Admin")">
                                 <i class="fa fa-dashboard"></i>
                                 <span>Quản lý thông tin tour</span>
+                            </a>
+                        </li>
+                        <li class="sub-menu">
+                            <a href="@Url.Action("QuanLyKhachSanView","Admin")">
+                                <i class="fa fa-hotel"></i>
+                                <span>Quản lý khách sạn</span>
                             </a>
                         </li>
 
