--- a/QuanLyTour/Views/Admin/QuanLyKhachSanView.cshtml
+++ b/QuanLyTour/Views/Admin/QuanLyKhachSanView.cshtml
@@ -30,7 +30,7 @@
                 Quản lý thông tin Khách Sạn
             </header>
             <div class="panel-body">
-                <a href="@Url.Action("ThemTourView","Admin")"><button type="button" class="btn btn-success" style="margin-bottom: 15px"><i class="fa fa-plus"></i></button></a>
+                <a href="@Url.Action("ThemKhachSanView","Admin")"><button type="button" class="btn btn-success" style="margin-bottom: 15px"><i class="fa fa-plus"></i></button></a>
                 <br />
                 @if (TempData["ErrorMessage"] != null)
                 {
