--- a/QuanLyTour/Views/Admin/QuanLyKhachSanView.cshtml
+++ b/QuanLyTour/Views/Admin/QuanLyKhachSanView.cshtml
@@ -30,7 +30,7 @@
                 Quản lý thông tin Khách Sạn
             </header>
             <div class="panel-body">
-                <a href="@Url.Action("ThemTourView","Admin")"><button type="button" class="btn btn-success" style="margin-bottom: 15px"><i class="fa fa-plus"></i></button></a>
+                <a href="@Url.Action("ThemKhachSanView","Admin")"><button type="button" class="btn btn-success" style="margin-bottom: 15px"><i class="fa fa-plus"></i></button></a>
                 <br />
                 @if (TempData["ErrorMessage"] != null)
                 {
@@ -87,7 +87,7 @@
                                     <td>@khachsan.MoTa</td>
                                     <td>@khachsan.LichTrinh</td>
                                     <td>
-                                        <a href="@Url.Action("SuaTourView","Admin", new{maTour = khachsan.MaKhachSan, maLoai = khachsan.MaLoaiKhachSan})"><button type="button" class="btn btn-warning" style="margin-left:5px;"><i class="fa fa-edit"></i></button></a>
+                                        <a href="@Url.Action("SuaKhachSanView","Admin", new{maTour = khachsan.MaKhachSan, maLoai = khachsan.MaLoaiKhachSan})"><button type="button" class="btn btn-warning" style="margin-left:5px;"><i class="fa fa-edit"></i></button></a>
                                     </td>
                                     <td>
                                         <a href="@Url.Action("XoaKhachSanView","Admin", new{maKhachSan = khachsan.MaKhachSan})"><button type="button" class="btn btn-danger" style="margin-left:5px;"><i class="fa fa-trash-o"></i></button></a>
