--- a/QuanLyTour/Views/Home/ThongTinNguoiDung.cshtml
+++ b/QuanLyTour/Views/Home/ThongTinNguoiDung.cshtml
@@ -32,24 +32,28 @@
                         <label for="TenNguoiDung">Họ tên</label>
                         <input type="text" class="form-control" id="TenNguoiDung" name="TenNguoiDung" value="@Model.TenNguoiDung" required />
                     </div>
-                    @* <div class="form-group"> *@
-                    @*     <label for="NgaySinh">Ngày tháng năm sinh</label> *@
-                    @*     <input type="date" class="form-control" id="NgaySinh" name="NgaySinh" value="@(Model.NgaySinh?.ToString("yyyy-MM-dd"))" required /> *@
-                    @* </div> *@
-                    @* <div class="form-group"> *@
-                    @*     <label>Giới tính</label> *@
-                    @*     <div> *@
-                    @*         <label class="radio-inline"> *@
-                    @*             <input type="radio" name="GioiTinh" value="Nam" @(Model.GioiTinh == "Nam" ? "checked" : "") required /> Nam *@
-                    @*         </label> *@
-                    @*         <label class="radio-inline"> *@
-                    @*             <input type="radio" name="GioiTinh" value="Nữ" @(Model.GioiTinh == "Nữ" ? "checked" : "") /> Nữ *@
-                    @*         </label> *@
-                    @*         <label class="radio-inline"> *@
-                    @*             <input type="radio" name="GioiTinh" value="Khác" @(Model.GioiTinh == "Khác" ? "checked" : "") /> Khác *@
-                    @*         </label> *@
-                    @*     </div> *@
-                    @* </div> *@
+                    <div class="form-group">
+                        <label for="ngaysinh" class="col-sm-3 col-form-label">Ngày sinh</label>
+                        <div class="col-sm-9">
+                            <input type="date" class="form-control" id="ngaysinh" name="ngaysinh"
+                                   value="@(Model.NgaySinh?.ToString("dd/MM/yyyy"))" required />
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-3 col-form-label">Giới tính</label>
+                        <div class="col-sm-9 d-flex align-items-center">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="gioitinh" value="nam"
+                                @(Model.GioiTinh == "nam" ? "checked" : "") required />
+                                <label class="form-check-label">Nam</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="gioitinh" value="nữ"
+                                @(Model.GioiTinh == "nữ" ? "checked" : "") />
+                                <label class="form-check-label">Nữ</label>
+                            </div>
+                        </div>
+                    </div>
                     <div class="form-group">
                         <label for="DiaChi">Địa chỉ</label>
                         <input type="text" class="form-control" id="DiaChi" name="DiaChi" value="@Model.DiaChi" required />
